--- a/lesson02/exercise02/start/styles.css
+++ b/lesson02/exercise02/start/styles.css
@@ -1,6 +1,1 @@
-h1 { border: 1px solid red; }
-h2 { border: 1px solid red; }
-h3 { border: 1px solid red; }
-h4 { border: 1px solid red; }
-h5 { border: 1px solid red; }
-h6 { border: 1px solid red; }
+h1, h2, h3, h4, h5, h6 { border: 1px solid red; }
