--- a/lesson02/exercise03/start/styles.css
+++ b/lesson02/exercise03/start/styles.css
@@ -1,4 +1,6 @@
-p { background: yellow; }
-p { padding: 20px; }
-p { margin-top: 20px; }
-p { margin-bottom: 40px; }
+p {
+    background: yellow;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
