--- a/lesson02/exercise04/start/styles.css
+++ b/lesson02/exercise04/start/styles.css
@@ -1,5 +1,10 @@
+/* heading styles */
 h1,h2,h3,h4,h5,h6 { border: 1px solid red; }
 
+/*
+Paragraph styles
+This style will be used to style all paragraphs
+*/
 p
 {
 	background: yellow;
