--- a/lesson03/exercise04/start/styles.css
+++ b/lesson03/exercise04/start/styles.css
@@ -40,6 +40,11 @@ h2,h3,h4,h5,h6 { color: green; }
 #main { margin: 1em 2em; }
 
 /* universal selectors */
+/* *
+{
+	margin: 0;
+	padding: 0;
+}*/
 
 /* descendant selectors */
 
