--- a/lesson03/exercise01/start/styles.css
+++ b/lesson03/exercise01/start/styles.css
@@ -1,4 +1,14 @@
 /* type selectors */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: arial, helvetica, sans-serif;
+}
+
+h1 { margin: 0; }
+h2, h3, h4, h5, h6 { color: green; }
+
+
 
 /* class selectors */
 
