--- a/lesson03/exercise02/start/styles.css
+++ b/lesson03/exercise02/start/styles.css
@@ -10,7 +10,24 @@ h1 { margin: 0; }
 h2,h3,h4,h5,h6 { color: green; }
 
 /* class selectors */
+.container
+{
+  width: 50em;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.nav
+{
+  padding: 1em 2em;
+  background: green;
+}
+
+.intro
+{
+  font-size: 1.2em;
+  color: gray;
+}
 /* ID selectors */
 
 /* universal selectors */
