--- a/lesson03/exercise07/start/styles.css
+++ b/lesson03/exercise07/start/styles.css
@@ -65,5 +65,6 @@ h2,h3,h4,h5,h6 { color: green; }
 .nav li > a { text-decoration: none; }
 
 /* adjacent sibling selectors */
+h3 + h4 { margin-top: 2em; }
 
 /* link pseudo-class selectors */
