--- a/lesson06/exercise03/start/styles.css
+++ b/lesson06/exercise03/start/styles.css
@@ -24,3 +24,12 @@ h2 { margin: 0; }
 }
 
 /* add rules here */
+.test01 {width: 200px;}
+.test02 {height: 60px;}
+.test03 {margin: 2em;}
+.test04 {padding: 2em;}
+.test05 {border: 1em solid red;}
+.test06 {overflow: visible;}
+.test07 {overflow: hidden;}
+.test08 {overflow: scroll;}
+.test09 {overflow: auto;}
