--- a/lesson07/exercise01/start/styles.css
+++ b/lesson07/exercise01/start/styles.css
@@ -22,11 +22,29 @@ h2
 }
 
 /* add the property */
+h2 { position: absolute; }
 
 /* positioned against? */
+ h2
+ {
+	 left: 0;
+	 top: 0;
+ }
+
+ .container { position: relative; }
 
 /* understanding values */
+h2 { left: 20px;}
+h2 { left: -20px;}
+h2 { top: 20px;}
+h2 { top: -20px;}
 
 /* stretched */
+h2
+{
+	left: 0;
+	right: 0;
+}
 
 /* sized */
+h2 { width: 300px;}
