--- a/lesson08/exercise03/start/styles.css
+++ b/lesson08/exercise03/start/styles.css
@@ -9,7 +9,7 @@ h1 { margin: 0 0 .5em; }
 
 strong
 {
-	border: 1px solid red; 
+	border: 1px solid red;
 	background: yellow;
 }
 
@@ -22,3 +22,9 @@ strong
 }
 
 /* add rules here */
+.example01
+{
+  float:left;
+  width: 300px;
+  border: 30px solid red;
+}
