--- a/lesson08/exercise04/start/styles.css
+++ b/lesson08/exercise04/start/styles.css
@@ -16,3 +16,9 @@ h1 { margin: 0 0 .5em; }
 }
 
 /* add rules here */
+.float01 { float: left; }
+.float02 { float: right; }
+
+.clear01 { clear: left; }
+.clear02 { clear: right; }
+.clear03 { clear: both; }
