--- a/lesson09/exercise03/start/styles.css
+++ b/lesson09/exercise03/start/styles.css
@@ -19,9 +19,9 @@ h1 { margin: 0 0 .5em; }
 }
 
 /* add rules here */
-
-
-
-
-
-
+.example01 { background-position: 0 0; }
+.example02 { background-position: left top; }
+.example03 { background-position: center center; }
+.example04 { background-position: right bottom; }
+.example05 { background-position: 40px 100px; }
+.example06 { background-position: 50% 50%; }
